# TongYiOpenai

./: CMakeLists.txt
demo/: CMakeLists.txt  ImageEdit.cpp  ImageGeneration.cpp  ImageTranslation.cpp  More.cpp  TongYiChat.cpp  Translate.cpp
docs/: Ref.md
include/TongYiOpenAi/: TongYiOpenAi.hpp
src/: CMakeLists.txt  TongYiOpenAi.hpp  main.cpp
